bundled_metadata/force-app/main/default/objects/User_Provisioning_Configuration__mdt/User_Provisioning_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>User Provisioning Configuration</label>
    <pluralLabel>User Provisioning Configurations</pluralLabel>
</CustomObject>