bundled_metadata/force-app/main/default/objects/User_Provisioning_Configuration__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AWAY FROM HOME</fullName>
                <default>true</default>
                <label>AWAY FROM HOME</label>
            </value>
            <value>
                <fullName>ORGANIZED TRADE</fullName>
            </value>
            <value>
                <fullName>TRADITIONAL SALE</fullName>
            </value>
            <value>
                <fullName>TRADITIONAL TRADE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>