bundled_metadata/force-app/main/default/objects/User_Provisioning_Configuration__mdt/fields/Permission_Set_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Group_Name__c</fullName>
    <label>Permission Set Group Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>