bundled_metadata/force-app/main/default/objects/User_Provisioning_Configuration__mdt/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDR</fullName>
                <default>true</default>
                <label>BDR</label>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Back-office</fullName>
            </value>
            <value>
                <fullName>Teleseller</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>WDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>