bundled_metadata/force-app/main/default/objects/User_Provisioning_Configuration__mdt/fields/Profile_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Dev_Name__c</fullName>
    <label>Profile Dev Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>