bundled_metadata/force-app/main/default/objects/User_Provisioning_Configuration__mdt/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <label>Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>