bundled_metadata/force-app/main/default/objects/User_Provisioning_Configuration__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>