bundled_metadata/force-app/main/default/objects/User_Provisioning_Configuration__mdt/fields/Program_Identification_Field__c.field-meta.xml
<CustomField>
    <fullName>Program_Identification_Field__c</fullName>
    <label>Program Identification Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>