bundled_metadata/force-app/main/default/objects/User_Provisioning_Configuration__mdt/listViews/Full_View.listView-meta.xml
<ListView>
    <fullName>Full_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Program__c</columns>
    <columns>Market__c</columns>
    <columns>Channel__c</columns>
    <columns>Persona__c</columns>
    <columns>Permission_Set_Group_Id__c</columns>
    <columns>Profile_Id__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Full View</label>
    <language>en_US</language>
</ListView>